# Elastos.Service.CarrierGroup

./: .gitignore  README.md
docs/: AGENT_CLIENT_COMMUNICATION_PROTOCOL.md  AGENT_GROUP_MESSAGE_PROTOCOL.md  COMMAND_MENU_STANDARDS.md  MOBILE_GROUP_CLASSIFICATION_GUIDE.md  MOBILE_MENU_TYPING_PRD.md
linux/common/: CommonVar.h
linux/manager/: managerApi.cpp
linux/manager/src/: DatabaseProxy.cpp  manager.cpp  manager.h
linux/service/: CMakeLists.txt  carrierService.cpp  carrierService.h
linux/service/lib/include/: ela_carrier.h  ela_filetransfer.h  ela_session.h
linux/service/source/: CarrierRobot.cpp  CarrierRobot.h
linux/service/source/Command/: ChatRobotCmd.cpp  ChatRobotCmd.hpp
linux/service/source/DataBase/: DatabaseProxy.cpp  DatabaseProxy.h
linux/ui/appserver/: README.txt  carrierService  chatrobot_config.example.ini  chatrobot_restful_api.py  server.py  server_wsgi.py  startCarrierByServer.sh
